--- a/lab3.html
+++ b/lab3.html
@@ -13,6 +13,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>My Web Page — Jashandeep Kaur</title>
+    <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
   <h1>Welcome to My Web Page</h1>
@@ -65,4 +66,5 @@
   </p>
 </body>
 </html>
+
     
